removed objectives. introduction reformulated. new section for research methodology and evaluation

--- a/refs.bib
+++ b/refs.bib
@@ -231,4 +231,34 @@
   publisher={IT Governance Institute}
 }
 
+@article{DSRM,
+  title={A design science research methodology for information systems research},
+  author={Peffers, Ken and Tuunanen, Tuure and Rothenberger, Marcus A and Chatterjee, Samir},
+  journal={Journal of management information systems},
+  volume={24},
+  number={3},
+  year={2007},
+  publisher={ME Sharpe}
+}
+
+@article{moody2003improving,
+  title={Improving the quality of data models: empirical validation of a quality management framework},
+  author={Moody, Daniel L and Shanks, Graeme G},
+  journal={Information systems},
+  volume={28},
+  number={6},
+  pages={619--650},
+  year={2003},
+  publisher={Elsevier}
+}
+
+@incollection{moody1998metrics,
+  title={Metrics for evaluating the quality of entity relationship models},
+  author={Moody, Daniel L},
+  booktitle={Conceptual Modeling--ER’98},
+  pages={211--225},
+  year={1998},
+  publisher={Springer}
+}
+
 
