--- a/report.tex
+++ b/report.tex
@@ -50,7 +50,7 @@
 {\def\large{} \def\normalsize{} \tableofcontents}
 \endgroup
 \input{sections/introduction.tex}
-\input{sections/objectives.tex}
+\input{sections/researchMethodology.tex}
 \input{sections/problem-contextualization.tex}
 \input{sections/related-work.tex}
 \input{sections/architecture.tex}
