--- a/sections/abstract.tex
+++ b/sections/abstract.tex
@@ -6,6 +6,6 @@
 
 \begin{abstract}
 
-Information Systems administration on an organization requires handling requests for projects and maintenance operations, in a way it brings value to all concerned parties. For meeting this expectations, Information Systems management needs to implement processes for dealing with incoming requests, aligning it with business expectations and criteria (risk, priority, team capabilities). Frameworks like COBIT, ITIL or PMBOK provide guidance on achieving success in management operations on an IT organization, being an important asset to design and implement processes for project and maintenance requests. In this document we present the state of the art on management processes for IT organizations, as the basis for an initial proposal of a process to handle requests for projects and maintenance operations on information systems administration.
+Information Systems administration on an organization requires handling requests for projects and maintenance operations, in a way it brings value to all concerned parties. For meeting this expectations, Information Systems management needs to implement processes for dealing with incoming requests, aligning it with business expectations and criteria (risk, priority, team capabilities). Frameworks like COBIT, ITIL or PMBOK provide guidance on achieving success in management operations on an IT organization, being an important asset to design and implement processes for project and maintenance requests. In this document we present the state of the art on management and governance processes for IT organizations, as the basis for an initial proposal of a process to handle requests for projects and maintenance operations on information systems administration.
 
 \end{abstract}
