--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -6,15 +6,16 @@
 
 \section{Introduction}
 
-As stated in ITIL V3 Service Strategy Volume, ``Information Technology (IT) enable, enhance, and are embedded in a growing number of goods and services. They are connecting consumers and producers of services in ways previously not feasible, while contributing to the productivity of numerous sectors of the services industry such as financial services, communications, insurance, and retail services.\cite{itilSS}''\par
-Currently, organizations moved from the limited perspective of profitability to a more wider view of the business, trying to maximize the business performance by increasing client satisfaction, products quality and management efficiency in comparison with the concurrency.\par
-Management on information systems is all about leadership, organizational structures and processes that ensure information systems support and alignment with organization's objectives. Information systems provide a competitive edge to concurrents, but an organization can only achieve management efficiency with well defined and matured processes. \par
-One important aspect for an organization take advantage of its concurrency is the way how it deals with receipt and categorization of project and maintenance requests. There is a inherent necessity to classify a new request in terms of opportunities  and value to the business as well as the risk associated with it, making it an important asset for the organization.\par
-For achieving this goal, the organization needs to review its management processes, which can be at any level of maturity. In any case, there is need to establish a standardized process for managing incoming requests, in order to improve efficiency and define clear work procedures in the organization.\par
+
+Currently, information systems organizations moved from the limited perspective of profitability to a more wider view of the business, trying to maximize the business performance by increasing client satisfaction, products' quality and management efficiency in comparison with the concurrency. Information Technologies (IT) were applied to business activities to achieve this goal from early.\par 
+As stated in \cite{itilSS}, ``Information Technology (IT) enable, enhance, and are embedded in a growing number of goods and services. They are connecting consumers and producers of services in ways previously not feasible, while contributing to the productivity of numerous sectors of the services industry such as financial services, communications, insurance, and retail services.''\par
+Although it is undeniable that IT brings new ways of productivity and performance growth, it is fundamental that organization ensures processes for its management and governance, making IT an even more important asset and always aligned with the organization business objectives. Management on information systems is all about leadership, organizational structures and processes that ensure information systems support and alignment with organization's objectives. Information systems provide a competitive edge to concurrents, but an organization can only achieve management efficiency with well defined and matured processes.\par
+One important part of business for an organization take advantage of its concurrency is the way how it deals with receipt and management of project execution and evolution maintenance requests. There is a inherent necessity to classify a new request in terms of opportunities  and value to the business as well as the risk associated with it, making it an important asset for the organization. Furthermore, the organization needs to possess clearly defined processes and structures for managing this requests. when a new request is purposed to an organization, it should be dealt based on a pre-defined process that will, independently of its source or type, define activities, inputs, outputs and responsibilities during the whole request life cycle until its fulfillment. \par
 For establishing standards on this subjects, business professionals came across with several frameworks and practical guides, making an attempt to provide and standardize many practices around management on information systems.\par
 Considering the state of the art, COBIT assumes a major position on good practices for information systems management. It provides a complete framework for implementing management and governance processes, taking in account a set of enablers and goals, from IT-related to business.\par
 For a more technical approach, oriented to IT services, we have ITIL V3, consisting in a good practices manual for managing IT services, during its life cycle. ITIL is divided in five volumes, comprising all the life cycle of IT services: service Strategy, service design, service transition, service operation and service continual improvement,\par
 PMBOK is the project management guide widely accepted by professionals from all areas of knowledge. It explores the processes that make part of the project life cycle, presenting them in a general way to all areas, making it universally applicable.\par
-Assuming the project management and maintenance management as the main focus areas for this project, we need to take in account the project portfolio aspects of the organization. It corresponds to a centralized management of processes, methods and technology, used by project managers and project management offices to analyze and manage a set of projects.\par
-We can have two distinct approaches for this project. One approach is dealing with the problem considering the process necessary for receiving and managing an project or a maintenance operation, considering we have already defined all aspects related to project portfolio. The other approach is to consider also the alignment of this process with the business and technological goals of the organization for creating value. We will need to analyze the state of the art in addition with the expectations of the client to decide which approach will we assume. This will be presented in section 7.\par
-This document is divided into three main sections: The problem contextualization on section 3, a state of the art in frameworks for project and maintenance management, as well as in market solutions for project and portfolio management and IT service Management, in sections 4, 5 and 6 and a first approach to the solution's architecture in section 7. This first approach to the solution's architecture intents to make an overview of the processes to include on project and maintenance management and analyze the impact of the frameworks and standards studied in section 4 and 5 to help in the process design.
+Considering that cooperation among organizations is fundamental on the actual business definitions, processes compliance with international standards is important for better acceptance of process activities and objectives. Thus, we will consider a set of standards in project management areas as IT service, risk or auditing management.\par   
+Assuming the project management and maintenance management as the main focus areas for this project, we need to take in account the project portfolio aspects of the organization. It corresponds to a centralized management of processes, methods and technology, used by project managers and project management offices to analyze and manage a set of projects. Considering this area, we can assume all aspects related to project portfolio are already defined or that we need to deal with the alignment of this processes with the business and technological goals of the organization for creating value.\par
+Our purpose to overcome the problem of this project is to combine several frameworks and standards to achieve an integrated process framework supported by a responsibility structure and a logical application architecture. To design this framework we will provide a state of the art in related frameworks and standards to IT governance and management, as well as for market solutions on IT Service Support management and Project and Portfolio management tools.\par
+For this project we will use the Design Science Research Methodology (DSRM)\cite{DSRM}, presented in section 2, that will provide guidance on the research process for this project, from problem identification to solution demonstration and evaluation.\par
