--- a/sections/evaluation.tex
+++ b/sections/evaluation.tex
@@ -6,3 +6,37 @@
 
 \section{Work's Evaluation Methodology}
 
+This section corresponds to the ``Evaluation'' phase of DSRM methodology. We will present how we intent to evaluate our solution. For this project, besides the demonstration evaluation, where we will apply our processes to a real case scenario of a information systems administration of an organization, we will evaluate our solution using the Moody and Shanks Framework \cite{moody2003improving}, a framework to evaluate the quality of data models.\par
+We pretend to evaluate our processes through interviews with the main stakeholders of this project, considering their opinion on the processes suitability and adequacy to the problem purposed. This will allow us to have feedback from the demonstration and evaluation steps of the DSRM process.\par
+Finally, and considering also the communication step of DSRM process, we will submit articles to conferences and journals where our solution will be evaluated and where we can receive feedback from specialists in the area. This articles will be developed in conformance with the conferences and journals calendar, being necessary to evaluate the available conferences and journals and also our project calendar.\par
+
+\subsection{Moody and Shanks Framework}
+
+This framework presents a set of metrics to evaluate and improve quality of data models. It has arise from the necessity of guidelines to evaluate quality of data models, trying to achieve agreement between experts on what is a good quality model. This framework consists of five primary constructs:
+
+\begin{itemize}
+\item Quality factors are the characteristics that contribute to the overall quality of the data model.
+\item Stakeholders are people involved in developing or using the data model, and therefore have an interest in its quality.
+\item Quality metrics define ways of measuring particular quality factors.
+\item Weightings define the relative importance of different quality factors and are used to make trade-offs between them.
+\item Improvement strategies are techniques for improving the quality of data models with respect to one or more quality factors.
+\end{itemize}
+
+For quality factors, that define how can we measure the quality of our model, this framework presents:
+
+\begin{itemize}
+\item Completeness refers to whether the data model contains all user requirements.
+\item Simplicity means that the data model contains the minimum possible entities and relationships.
+\item Flexibility is defined as the ease with which the data model can cope with business and/or regulatory change.
+\item Integration is defined as the consistency of the data model with the rest of the organisation’s data.
+\item Understandability is defined as the ease with which the concepts and structures in the data model can be understood.
+\item Implementability is defined as the ease with which the data model can be implemented within the time, budget and technology constraints of the project.
+\end{itemize}
+
+For each quality factor, a set of metrics are presented for evaluation in \cite{moody1998metrics}. The objective of this metrics is to refine these quality factors in specific and concrete measures for evaluating the quality of data models. 
+
+\subsection{Interviews}
+
+Interviews are an evaluation method that will provide us feedback from the stakeholders, defining acceptance criteria for the solution. This interviews will be made, in majority, with the objective of after presenting a solution proposal, discuss which aspects of the solution are already covered and which ones need to be developed or iterated. This will allow us to apply better the DSRM process, taking advantage of its iterative character to achieve a more complete and quality solution.\par
+The results of each interview will be defined later, considering the project phase they are inserted and the concrete objectives, but will in majority be based in open interviews were we pretend, in closer collaboration with the stakeholders, define what is already achieved and what needs improvements and new iterations.  
+
