added CMMI topic to related work

--- a/sections/related-work.tex
+++ b/sections/related-work.tex
@@ -66,10 +66,10 @@ All processes for management and governance are presented in the appendix and al
 Relating to other frameworks and standards, COBIT tries to establish a framework that is compliant with the most widely accepted standards in IT governance and management. In figure 4 we can see the standards COBIT 5 relates by processes domain, with special attention to ITIL V3\cite{itilSS,itilSD,itilSO,itilST,itilCSI}, ISO/IEC 20000\cite{ISO20000-1}, PMBOK\cite{pmbok5} and CMMI\cite{cmmi}, that are closely related to this project's problem. This compliance with other standards is fundamental for a widely adoption of COBIT 5, in the way it tries to establish goals, metrics, practices, roles, inputs and outputs for each process, making it necessary being compliant with international standards. This will improve COBIT application and acceptance on organizations.\par
 
 
-\subsubsection{CMMI and its importance for COBT 5}
+\subsubsection{CMMI}
 
-CMMI (Capability Maturity Model Integration), first developed at the Software Engineering Institute at Carnegie Mellon University and currently operated by the CMMI Institute, consists on a set of practices and process improvement goals that organizations can use to evaluate and improve its processes. 
-CMMI, currently on version 1.3, defines process areas considering business objectives. The three areas of interest for CMMI are:
+CMMI (Capability Maturity Model Integration), first developed at the Software Engineering Institute at Carnegie Mellon University and currently operated by the CMMI Institute, consists on a set of practices and process improvement goals that organizations can use to evaluate and improve its processes. The CMMI framework provides all structures to produce CMMI models, training and appraisal methods.
+CMMI, currently on version 1.3, defines areas of interest that group collections of CMMI components for models, training and appraisal construction. The three areas of interest for CMMI are:
 
 \begin{itemize}
 
@@ -80,6 +80,49 @@ CMMI, currently on version 1.3, defines process areas considering business objec
 \item CMMI for Services (CMMI-SVC) - Provides guidance to organizations that establish, manage, and deliver services that meet the needs of customers and end users.
 
 \end{itemize}
+
+For this areas of interest, CMMI defines 22 core process areas, covering processes that are fundamental to improve the organization processes. Each one of the areas is a set of related practices that, when implemented, will achieve goals important for process improvement. The process areas are presented in Appendix section XXX.\par
+CMMI supports two types of improvement paths, depending on the organization objectives. One is used for the organization to improve processes related to a specific process area, named the continuous representation, and the other one is used for organizations to improve a set of relating processes by incrementally consider sets of process areas, named the staged representation. As stated by CMMI, the continuous representation will allow to achieve capability levels and the staged representation will achieve maturity levels.\par
+For the staged representation, the following capability levels are defined:
+
+\begin{itemize}
+
+\item Level 0 - Incomplete - Process not performed or only partially performed. Specific goals of process area not achieved.
+
+\item Level 1 - Performed - Process performs the needed work to produce work products and satisfies the specific goals of the process area.
+
+\item Level 2 - Managed - Performed process that is planned and executed according with policy.
+
+\item Level 3 - Defined - Managed process that is tailored from the organization's set of standard processes according to the organization's tailoring guidelines.
+ 
+\end{itemize}
+
+For the continuous representation, the maturity levels defined are:
+
+\begin{itemize}
+
+\item Level 1 - Initial - Chaotic and Ad-Hoc processes. Organization does not provide a stable environment to support processes. Organizations are characterized by easily abandoning its processes and being unable to repeat them.
+
+\item Level 2 - Managed - Projects establish the foundation for an organization to become an effective acquirer of needed capabilities by institutionalizing select project management and acquisition engineering processes. Processes, projects, products and services are managed and periodically evaluated. Processes are maintained in times of crisis.
+
+\item Level 3 - Defined - Acquirers use defined processes for managing projects and suppliers. Project management and acquisition practices are embedded in the standard process set. Organization set of standards is established and improved over time. Processes described more rigorously than in level 2.
+
+\item Level 4 - Quantitatively Managed - Acquirers establish quantitative objectives for quality and process performance and use them as criteria in managing processes. Process performance becomes predictable, controlled using statistical and quantitative techniques for prediction.
+
+\item Level 5 - Optimizing - Process performance continuous improvement based on the organizations' objectives and performance needs comprehension. optimization is achieved through incremental and innovative process and technological improvements.
+
+\end{itemize}
+
+CMMI does not provide certification to organizations. Instead, it can be used to conduct appraisals, measuring the organization progress and earning maturity or capability levels face to CMMI Levels. These appraisals can be used for comparing the current practices with the CMMI best practices, finding areas to improve, for outside accreditation by suppliers and other stakeholders of conformance to a specific level of CMMI and to meets contractual requirements.\par
+To conduct an CMMI appraisal, the organization must follow the appraisal Requirements for CMMI document [INSERT REFERENCE HERE] and must use an CMMI model and an appraisal method conformant with the appraisal Requirements for CMMI, as the SCAMPI appraisal method [INSERT REFERENCE HERE]\par
+
+
+\subsubsection{CMMI importance for COBIT 5}
+
+CMMI can be used by COBIT for process improvement purposes. Considering COBIT as a framework for governance and management processes, providing guidance and control, it is fundamental for it to also consider improvement as an important part of these processes. Also, and considering COBIT application for this project, we will apply its guidance on a real-case organization, that deals with suppliers and other stakeholders, many time interested in the processes level of maturity conducted by the organization, in accordance to CMMI levels. Considering this, its fundamental for COBIT application to consider the CMMI body of knowledge and application.\par
+COBIT 5 presents an process capability model, based on ISO/IEC 15504 Software Engeneering - Process Assessment standard, presented in section XXX. This standard has many similarities and guidelines presented by CMMI, but is not as widely accepted as this one. In fact, it has appeared after CMM, that was been replaced by the CMMI, and cannot face with some benefits CMMI presents face to this standard.\par
+COBIT 5 also considers CMMI as a related framework, as stated in figure XXX, and identifies, as stated in [REFERENCE HERE], that some areas and domains are covered by CMMI, namely application-building and acquisition-related processes in the Build And Acquire domain and some organizational and quality-related processes from the Acquire, Plan and Organize domain.\par
+
 
 \subsubsection{COBIT 5 process capability model}
 
