updated related work on market solutions with methodologies presentation

--- a/sections/related-work.tex
+++ b/sections/related-work.tex
@@ -380,9 +380,74 @@ In figure 10 is presented the process flow for the management of an audit progra
 
 \section{A State of the Art in Market Solutions}
 
-\subsection{Project Management}
+Considering we are interested in developing a logical application architecture, we need to analyze solutions available on the market to compose this architecture. This solutions should be evaluated accordingly with its importance and benefit for project purposes, namely for improving our performance in project management and evolving maintenance.\par
+Considering this two areas of interest for this project, we will perform an analysis of the solutions available on the market for Project and Portfolio Management Tools (PPM Tools) and for IT Service Support Tools (ITSM Tools). There are hundreds of solutions available for both tools, so we need find mechanisms to evaluate some of them fairly and taking in account its functionalities and benefits for this project. Thus, we will use researches performed in this areas by Gartner and and Forrester, teo companies dedicated on IT research and advisory. Both companies provide techniques to evaluate PPM and ITSM tools, providing us the necessary information to evaluate the market offers and perform a usage proposal based on this results.\par
 
-\subsection{IT Service Management}
+\subsection{Gartner Research}
+
+Gartner inc. is an information technology and research and advisory company that delivers to its clients technology-related insight for helping on business decisions. As stated by Gartner, ``From CIOs and senior IT leaders in corporations and government agencies, to business leaders in high-tech and telecom enterprises and professional services firms, to technology investors, we are the valuable partner to clients in over 9,100 distinct enterprises worldwide.''\par
+Gartner provides a set of methodologies to help clients on its IT investments, reducing and managing risks as well as helping achieving sucess through research processes that are based in years of experience and maturation. The objective of gartner is to provide methodologies that ensure business decisions by clients are made with high levels of confidence.\par
+Considering this project objectives, we will use the following methodologies from gartner:
+
+\subsubsection{Gartner Magic Quadrant}
+
+The objective of the Gartner Magic Quadrant is to provide a wide-angle view of the relative positions of a specific market's competitors. It helps on analyzing how well technology providers are executing against their stated vision, presenting a graphical competitive positioning (see figure XXX) of four types of technology providers, in growing markets with providers differentiation. The four types of technology providers are:
+
+\begin{itemize}
+\item Leaders - Execute well against their current vision and are well positioned for tomorrow.
+\item Visionaries - understand where the market is going or have a vision for changing market rules, but do not yet execute well.
+\item Niche Players - Focus successfully on a small segment, or are unfocused and do not out-innovate or outperform others.
+\item Challengers - Execute well today or may dominate a large segment, but do not demonstrate an understanding of market direction.
+\end{itemize}
+
+\begin{figure}[t!]
+\centering
+\includegraphics[width=0.85\textwidth]{img/GartnerMagicQuadrant.png}
+\caption{Gartner Magic Quadrant representation}
+\end{figure}
+
+This methodology is fundamental to analyze technology providers we can consider for adoption, but we need to take in account on how each provider aligns with the business goals of the organization. Not always focusing on the leaders' quadrant is the best option and we need to know what specific objectives we want to achieve to select the best provider to fulfill our requirements. 
+
+
+\subsubsection{Gartner MarketScope}
+
+Gartner MarketScope methodology is used for analyzing solutions for emerging markets with changing requirements. Gartner Magic Quadrant is not suitable for this type of markets as far as a competitive positioning is not useful and accurate for an emerging market. Thus, MarketScope intents to understand how the status of an emerging market aligns with clients state of maturity and future plans. It helps evaluating participating technology providers against the Gartner vision for that market. MarketScopes rate each market’s participating technology providers as Strong Positive, Positive, Promising, Caution or Strong Negative.\par
+This methodology is complementing the Magic Quadrant methodology being more suitable to emerging markets, where clients are less interested on technology providers positioning on market but on the investment opportunity on an emerging market solution and the risks associated with it.\par 
+
+\subsubsection{Gartner Critical Capabilities}
+
+This methodology will complement Gartner Magic Quadrant, providing deeper insight into providers' solutions, presenting its offerings based on service and product ratings of key capabilities considered as the most important for a specific service or product. As stated by Gartner, ``a Critical Capabilities document is a comparative analysis that scores competing products or services against a set of critical differentiators identified by Gartner. It shows you which products or services are a best fit in various use cases to provide you actionable advice on which products/services you should add to your vendor shortlists for further evaluation.''\par
+This methodology offers better benefits when applied in line with the Magic Quadrant methodology, providing deeper insight on products and services offerings from providers that Magic Quadrant positions on the market. When available, we will consider these two methodologies together for evaluating PPM and ITSM solutions.\par
+
+\subsection{Forrester Research} 
+
+Forrester is an research and advisory company providing guidance to professionals in 13 key roles across the business technology, marketing and strategy segments. It presents to its clients research-based services to help them on business needs and decisions, centering its corporate mission on providing client's adaptable and centered solutions to his needs. As stated by Forrester Role Manifesto, its core values, called 3CIQ, are the Clients, Collaboration, Courage, Integrity and Quality.\par
+Considering our objectives for this project, we will consider the Forrester Wave Methodology to analyze the PPM and ITSM solutions available on the market.
+
+\subsubsection{Forrester Wave Methodology}
+
+This methodology is provided by Forrester to evaluate vendors in software, hardware or service market, presenting the criteria and the weights for this evaluation. this evaluation methodology is transparent for the client, being only based in criteria weighting performed by Forrester research professionals. In addition, all the methodology process and participants are presented, making clear how the evaluation was conducted.\par
+Each Forrester Wave counts with the participation of four key elements: An analyst, a research associate, a vendor response team and costumer references. Before starting the analysis, the analyst performs a preparation process, researching the evaluation category, identifying the category and the scope, selecting and evaluation method and creating the research plan and timeline.\par
+Consider the evaluation process, it is composed by five milestones: Create evaluation criteria, determine vendors for inclusion, gather evaluation data, create the vendor comparison and publish the report. This milestones ensure a well defined and independent process.\par
+We will present, for the PPM an ITSM tools, the corresponding Forrester Wave reports, complementing the Gartner evaluation with Forrester analysis making our research for this tools more valuable and rich.\par 
+
+\subsection{Project and Portfolio Management Tools analysis}
+
+\subsubsection{Gartner Magic Quadrant for PPM solutions}
+
+\subsubsection{Gartner Magic Quadrant for Cloud-Based Solutions}
+
+\subsubsection{Gartner MarketScope}
+
+\subsubsection{Forrester Wave}
+
+\subsection{IT Service Support Management Tools analysis}
+
+\subsubsection{Gartner Magic Quadrant for ITSM solutions}
+
+\subsubsection{Gartner Critical Capabilities Cloud-Based Solutions}
+
+\subsubsection{Forrester Wave}
 
 
 
